    package, to minimise noise in the diffs (Closes: #475506)
  * getbuildlog: New script from Frank S. Thomas to download build logs for
    a given package (Closes: #483169)
  * mass-bug:
    + Allow the component parts of a version number to be used in the template,
      as #EPOCH#, #UPSTREAM_VERSION# and #REVISION# (Closes: #482587)
  * mergechanges: Allow changes files with Formats of 1.7 and 1.8 to be merged,
    by removing the Checksums-* fields from the Format: 1.8 files. The result
    will be a valid Format: 1.7 changes file. (Closes: #481585)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 19 May 2008 20:14:38 +0100

devscripts (2.10.28) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts, build-rdeps, chdist, debcommit, dget, mass-bug: Fix POD errors in
    the manpages. Thanks Riccardo Stagni (Closes: #479609)
  * bts: Improve the message produced when unknown options are passed to
    a command to include the command name
  * checkbashisms:
    + Also match use of "SHELL=/bin/bash -e" when checking whether a makefile
      explicitly uses bash
    + Update the check for "function" to more closely match lintian's (and
      therefore be less prone to false positives)
    + Update the check for "echo -e" to only match -n as an extra option
      rather than all theoretically possible options, thus reducing false
      positives
    + Further improve the heredoc detection (to allow the space in "<< 'foo'")
    + Make the check for "process substitution" ignore quoted strings
    + Fix false positives in the tests for "time" and "test with unary -a"
    + Apply various improvements to "quoted block" detection
    + Correctly match 'echo "$(< $0)"'
    + Add checks for "$[" (a deprecated form of arithmetic expansion) and
      the use of the -a or -f arguments to the "readonly" builtin
  * cowpoke: New script to upload a Debian source package to a cowbuilder host
    and build it, optionally also signing and uploading the result to an