@@ -9,6 +9,8 @@ devscripts (2.10.29) UNRELEASED; urgency=low
   * mass-bug:
     + Allow the component parts of a version number to be used in the template,
       as #EPOCH#, #UPSTREAM_VERSION# and #REVISION# (Closes: #482587)
+    + Add a command-line option to specify that the generated e-mails should
+      not be wrapped to 70 characters (Closes: #483030)
   * mergechanges: Allow changes files with Formats of 1.7 and 1.8 to be merged,
     by removing the Checksums-* fields from the Format: 1.8 files. The result
     will be a valid Format: 1.7 changes file. (Closes: #481585)
